fix(select): adjust label alignment when in a card

--- a/core/src/components/input/input.scss
+++ b/core/src/components/input/input.scss
@@ -299,6 +299,8 @@
   transition: background-color 15ms linear;
 
   background: var(--background);
+
+  line-height: normal;
 }
 
 // Input Native Wrapper
