--- a/core/src/components/select/select.scss
+++ b/core/src/components/select/select.scss
@@ -213,6 +213,8 @@ button {
 
   background: var(--background);
 
+  line-height: normal;
+
   cursor: inherit;
 
   box-sizing: border-box;
