--- a/core/src/components/textarea/textarea.scss
+++ b/core/src/components/textarea/textarea.scss
@@ -260,6 +260,8 @@
   transition: background-color 15ms linear;
 
   background: var(--background);
+
+  line-height: normal;
 }
 
 // Textarea Native Wrapper
